<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ksyun.mc.AgoraVRTCDemo.ui.MainActivity"
    android:background="@color/bg">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/main_activity_header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="116dp"
            android:text="@string/main_activity_header"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:layout_marginStart="28dp"
                    android:textColor="@color/white"
                    android:text="@string/channel_id"/>

                <EditText
                    android:id="@+id/room_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:layout_marginRight="27dp"
                    android:layout_marginEnd="27dp"
                    android:background="@drawable/round_edittext"
                    android:hint="@string/single_line_input"
                    android:inputType="textUri"/>
            </LinearLayout>

            <Button
                android:id="@+id/start"
                android:layout_width="200dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_button"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <Button
                android:id="@+id/settings"
                android:layout_width="200dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_button"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="16dp" />

        </LinearLayout>

        <include
            android:id="@+id/note"
            layout="@layout/note_layout">

        </include>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/show_demo_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/note" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="13dp"
            android:text="@string/demo_note"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
